components/cluster-configs/login/overlays/ldap/dump/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-test
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap-test
  template:
    metadata:
      labels:
        app: ldap-test
    spec:
      serviceAccountName: default
      containers:
        - name: ldap-utils
          image: docker.io/mbentley/ldap-utils
          command:
            - sleep
            - infinity
