components/cluster-configs/login/overlays/ldap/dump/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openldap-allow-all
  namespace: auth
spec:
  podSelector:
    matchLabels:
      app: openldap
  policyTypes:
    - Ingress
  ingress:
    - {}
